--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native": "0.76.9",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "^1.22.6",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "^3.17.4",
     "react-native-safe-area-context": "4.12.0",
@@ -52,7 +53,8 @@
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "expo-location": "~18.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
