--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-calendars": "^1.1312.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "^1.22.6",
@@ -53,9 +54,11 @@
     "react-native-streetview": "^0.4.2",
     "react-native-svg": "^15.11.2",
     "react-native-swiper": "^1.6.0",
+    "react-native-vision-camera": "^4.6.4",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "expo-camera": "~16.0.18"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
